--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.hsbc.twitter</groupId>
-	<artifactId>twitter</artifactId>
+	<artifactId>twitter-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>twitter</name>
-	<description>Demo project for Twitter</description>
+	<name>twitter service</name>
+	<description>Twitter service</description>
 
 	<properties>
 		<java.version>11</java.version>
@@ -52,6 +52,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>app</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
